# FollowTheFootPrint

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  potential_stocks_US.csv  potential_stocks_ind.csv  pyproject.toml  setup.sh
docs/: DEPLOYMENT.md  DETAILED.md
experiments/: README.md  demand_zone_backtest.py
src/: daily_tracker.py  follow_the_foot_prints.py  weekly_low_gemini.py  weekly_low_ones_with_leg_out.py  weekly_tracker.py  yahoo_15mins.py  yahoo_hourly.py  yahoo_weekly.py
src/followthefootprints/: __init__.py  __main__.py  analyzer.py  exceptions.py  index_fetcher.py  indices.py
tests/: conftest.py  test_analyzer.py  test_index_fetcher.py
